--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <h1 id="title" class="btn">This Works!</h1>
-    <script src="index.js"></script>
+    <div class="js-clock"></div>
+    <script src="clock.js"></script>
   </body>
 </html>
