--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="js-clock">
-      <h1>00:00</h1>
+      <h1 class="clock">00:00</h1>
       <form class="js-form form">
         <input type="text" placeholder="What is your name?" />
       </form>
@@ -17,7 +17,7 @@
       <input type="text" placeholder="Write a to do" />
     </form>
     <ul class="js-toDoList"></ul>
-
+    <span class="js-weather"></span>
     <script src="clock.js"></script>
     <script src="greeting.js"></script>
     <script src="todo.js"></script>
