--- a/index.html
+++ b/index.html
@@ -1,27 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Something</title>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="index.css" />
+    <title>Parcel Sandbox</title>
+    <meta charset="UTF-8" />
   </head>
   <body>
-    <div class="js-clock">
-      <h1 class="clock">00:00</h1>
-      <form class="js-form form">
-        <input type="text" placeholder="What is your name?" />
-      </form>
-      <h4 class="js-greetings greetings"></h4>
-    </div>
-    <form class="js-toDoForm">
-      <input type="text" placeholder="Write a to do" />
-    </form>
-    <ul class="js-toDoList"></ul>
-    <span class="js-weather"></span>
-    <script src="clock.js"></script>
-    <script src="greeting.js"></script>
-    <script src="todo.js"></script>
-    <script src="background.js"></script>
-    <script src="weather.js"></script>
+    <h2>Hello!</h2>
+    <script src="index.js"></script>
   </body>
 </html>
