--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <title>Parcel Sandbox</title>
-    <meta charset="UTF-8" />
+    <title>something</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
+
   <body>
-    <h2>Hello!</h2>
-    <script src="index.js"></script>
+    <div class="js-clock">
+      <h1>00:00</h1>
+    </div>
+    <form class="js-form">
+      <input type="text" placeholder="what is your name?" />
+    </form>
+    <script src="clock.js"></script>
+    <script src="greeting.js"></script>
   </body>
 </html>
