--- a/forQuiz/index.html
+++ b/forQuiz/index.html
@@ -8,8 +8,9 @@
 
   <body>
     <div class="js-clock">
-      <h1>Time Until FAT 1/2</h1>
-      <h2>00d 00h 00m 00s</h2>
+      <h2>Time Until 🔥EXAM🔥</h2>
+      <h1>00d 00h 00m 00s</h1>
+      <h3>핸드폰 끄고 공부하자....</h3>
     </div>
     <script src="index.js"></script>
   </body>
