--- a/forQuiz/index.html
+++ b/forQuiz/index.html
@@ -3,15 +3,17 @@
   <head>
     <title>Parcel Sandbox</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="src/styles.css" />
   </head>
-
   <body>
-    <div class="js-clock">
-      <h2>Time Until 🔥EXAM🔥</h2>
-      <h1>00d 00h 00m 00s</h1>
-      <h3>핸드폰 끄고 공부하자....</h3>
-    </div>
-    <script src="index.js"></script>
+    <h1>Where are you from?</h1>
+    <select>
+      <option value="init">--- Choose Your Country ---</option>
+      <option value="Korea">Korea</option>
+      <option value="Greece">Greece</option>
+      <option value="Turkey">Turkey</option>
+      <option value="Finland">Finland</option>
+    </select>
+    <script src="src/index.js"></script>
   </body>
 </html>
