--- a/forQuiz/index.html
+++ b/forQuiz/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Parcel Sandbox</title>
-    <meta charset="UTF-8" />
+    <title>something</title>
+    <meta charset="utf-8" />
     <link rel="stylesheet" href="src/styles.css" />
   </head>
+
   <body>
-    <h1>Where are you from?</h1>
-    <select>
-      <option value="init">--- Choose Your Country ---</option>
-      <option value="Korea">Korea</option>
-      <option value="Greece">Greece</option>
-      <option value="Turkey">Turkey</option>
-      <option value="Finland">Finland</option>
-    </select>
+    <form class="js-toDoForm">
+      <h1>Add Tasks</h1>
+      <input type="text" placeholder="Write a to do " />
+    </form>
+    <h2>Pending</h2>
+    <ul class="js-toDoList"></ul>
+    <h2>Finished</h2>
+    <ul class="js-finList"></ul>
     <script src="src/index.js"></script>
   </body>
 </html>
