--- a/forQuiz/index.html
+++ b/forQuiz/index.html
@@ -7,14 +7,18 @@
   </head>
 
   <body>
-    <form class="js-toDoForm">
-      <h1>Add Tasks</h1>
-      <input type="text" placeholder="Write a to do " />
-    </form>
-    <h2>Pending</h2>
-    <ul class="js-toDoList"></ul>
-    <h2>Finished</h2>
-    <ul class="js-finList"></ul>
+    <div>
+      <h1>Random Number Game</h1>
+      <h2 class="js-title">Generate a number between 0 and 10</h2>
+      <input type="range" id="js-bar" value="11" min="1" max="200" />
+      <div>
+        <span>Guess the Number :</span>
+        <input type="number" min="0" size="3px" id="js-guessNum" />
+        <button class="js-button">Play!</button>
+      </div>
+      <h3></h3>
+      <h2 class="js-result"></h2>
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
