--- a/forQuiz/index.html
+++ b/forQuiz/index.html
@@ -5,19 +5,25 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="src/styles.css" />
   </head>
-
   <body>
-    <div>
-      <h1>Random Number Game</h1>
-      <h2 class="js-title">Generate a number between 0 and 10</h2>
-      <input type="range" id="js-bar" value="11" min="1" max="200" />
-      <div>
-        <span>Guess the Number :</span>
-        <input type="number" min="0" size="3px" id="js-guessNum" />
-        <button class="js-button">Play!</button>
-      </div>
-      <h3></h3>
-      <h2 class="js-result"></h2>
+    <div class="calculator">
+      <div class="btn result"><p class="result2">0</p></div>
+      <div class="hov num btn one"><p>1</p></div>
+      <div class="hov num btn two"><p>2</p></div>
+      <div class="hov num btn three"><p>3</p></div>
+      <div class="hov num btn four"><p>4</p></div>
+      <div class="hov num btn five"><p>5</p></div>
+      <div class="hov num btn six"><p>6</p></div>
+      <div class="hov num btn seven"><p>7</p></div>
+      <div class="hov num btn eight"><p>8</p></div>
+      <div class="hov num btn nine"><p>9</p></div>
+      <div class="hov num btn zero"><p>0</p></div>
+      <div class="hov btn equal"><p>=</p></div>
+      <div class="hov btn reset"><p>c</p></div>
+      <div class="hov btn operator plus"><p>+</p></div>
+      <div class="hov btn operator minus"><p>-</p></div>
+      <div class="hov btn operator multi"><p>*</p></div>
+      <div class="hov btn operator divide"><p>/</p></div>
     </div>
     <script src="src/index.js"></script>
   </body>
