--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>something</title>
+    <title>Nomad Coders | Vanilla JS</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="src/styles.css" />
   </head>
-
   <body>
     <div class="ask-name">
       <form class="js-form form">
@@ -17,7 +16,7 @@
             placeholder="Write your name here."
           />
           <div>
-            <p>Please allow location information!</p>
+            <p>Please allow location information.</p>
             <p>&copy; 2020 Nomad Coders.</p>
           </div>
         </div>
@@ -26,7 +25,7 @@
     <div class="container">
       <div class="outter-box things">
         <div class="js-clock">
-          <h1>00:00</h1>
+          <h1>loading...</h1>
         </div>
         <div>
           <h4 class="js-greetings greetings"></h4>
@@ -34,7 +33,7 @@
         <span class="js-weather"></span>
       </div>
       <div class="date">
-        <h1 class="date-title">Good Day</h1>
+        <h1 class="date-title">loading...</h1>
       </div>
       <div class="outter-box toDoList">
         <div class="input-task">
@@ -59,16 +58,14 @@
         </div>
       </div>
     </div>
-
     <div class="bigScreen">
       <div class="bigScreen__text">Please make your screen BIG!</div>
     </div>
-
-    <script src="clock.js"></script>
-    <script src="greeting.js"></script>
-    <script src="todo.js"></script>
-    <script src="bg.js"></script>
-    <script src="click.js"></script>
-    <script src="weather.js"></script>
+    <script src="src/clock.js"></script>
+    <script src="src/greeting.js"></script>
+    <script src="src/todo.js"></script>
+    <script src="src/bg.js"></script>
+    <script src="src/click.js"></script>
+    <script src="src/weather.js"></script>
   </body>
 </html>
